fix horizontal spacing on benefits, removing padding for NGT section, add radius to hamburger lines

--- a/style.css
+++ b/style.css
@@ -645,6 +645,7 @@ hr {
     justify-items: center;
     max-width: 144rem;
     margin: auto;
+    column-gap: 5rem;
 }
 
 .additional-features__icons-mobile {
@@ -660,6 +661,8 @@ hr {
     font-size: 2.8rem;
     font-weight: bold;
     text-align: center;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }
 
 .additional-features__icons-text {
@@ -733,7 +736,7 @@ hr {
     grid-template-columns: 1fr 1fr;
     margin: auto;
     max-width: 144rem;
-    padding: 8rem 10rem;
+    padding: 8rem 0;
 }
 
 .ngt-img {
